--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -40,7 +40,7 @@
               "news-title">Version 1.56.0 beta</span></h2>
 
               <p><span class=news-date">In Progress</span></p>
-              <p><a href="/doc/libs/1_56_0_beta1/">Documentation</a>
+              <p><a href="/doc/libs/1_56_0_b1/">Documentation</a>
               <p><span class="news-download"><a href="http://sourceforge.net/projects/boost/files/boost/1.56.0.beta.1/">Download this beta release.</a></span></p>
               <div class="news-description">
                 <div class="description">
@@ -62,14 +62,14 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/assert/">Assert</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/assert/">Assert</a>:</span>
   Customizable assert macros.
           Maintained by Peter Dimov.
         </div>
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/core/">Core</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/core/">Core</a>:</span>
   Core utilities used by other
           libraries, with minimal dependencies. Maintained by Peter Dimov, Glen Fernandes
           and Andrey Semashev.
@@ -77,7 +77,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/lexical_cast/">Lexical_Cast</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/lexical_cast/">Lexical_Cast</a>:</span>
   General literal
           text conversions, such as an int represented a string, or vice-versa, from
           Kevlin Henney.
@@ -85,7 +85,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/throw_exception/">Throw_Exception</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/throw_exception/">Throw_Exception</a>:</span>
   A common
           infrastructure for throwing exceptions from Boost libraries, from Emil
           Dotchevski.
@@ -105,14 +105,14 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/align/">Align</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/align/">Align</a>:</span>
   Memory alignment functions,
           allocators, and adaptors, from Glen Fernandes.
         </div>
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/type_index/">Type_Index</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/type_index/">Type_Index</a>:</span>
   Runtime/Compile
           time copyable type info, from Antony Polukhin.
         </div>
@@ -124,7 +124,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/any/">Any</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/any/">Any</a>:</span>
           <ul>
             <li>
               <div>
@@ -141,7 +141,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/assign/">Assign</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/assign/">Assign</a>:</span>
           <ul>
             <li>
               <div>
@@ -153,7 +153,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/atomic/">Atomic</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/atomic/">Atomic</a>:</span>
           <ul>
             <li>
               <div>
@@ -229,7 +229,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/circular_buffer/">Circular Buffer</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/circular_buffer/">Circular Buffer</a>:</span>
           <ul>
             <li>
               <div>
@@ -246,7 +246,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/concept_check/">Concept Check</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/concept_check/">Concept Check</a>:</span>
           <ul>
             <li>
               <div>
@@ -258,7 +258,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/context/">Context</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/context/">Context</a>:</span>
           <ul>
             <li>
               <div>
@@ -305,7 +305,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/coroutine/">Coroutine</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/coroutine/">Coroutine</a>:</span>
           <ul>
             <li>
               <div>
@@ -352,7 +352,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/dynamic_bitset/">Dynamic Bitset</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/dynamic_bitset/">Dynamic Bitset</a>:</span>
           <ul>
             <li>
               <div>
@@ -379,7 +379,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/chrono/">Chrono</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/chrono/">Chrono</a>:</span>
           <ul>
             <li>
               <div>
@@ -463,7 +463,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/flyweight/index.html">Flyweight</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/flyweight/index.html">Flyweight</a>:</span>
           <ul>
             <li>
               <div>
@@ -494,7 +494,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/lexical_cast/">Lexical Cast</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/lexical_cast/">Lexical Cast</a>:</span>
           <ul>
             <li>
               <div>
@@ -531,7 +531,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/log/index.html">Log</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/log/index.html">Log</a>:</span>
           <ul>
             <li>
               <div>
@@ -623,7 +623,7 @@
             </li>
             <li>
               <div>
-                See <a href="/doc/libs/1_56_0_beta1/libs/log/doc/html/log/changelog.html">changelog</a>
+                See <a href="/doc/libs/1_56_0_b1/libs/log/doc/html/log/changelog.html">changelog</a>
                 for more details.
               </div>
             </li>
@@ -632,7 +632,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/math/index.html">Math</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/math/index.html">Math</a>:</span>
           <ul>
             <li>
               <div>
@@ -717,7 +717,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/multi_array/index.html">MultiArray</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/multi_array/index.html">MultiArray</a>:</span>
           <ul>
             <li>
               <div>
@@ -755,7 +755,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/multi_index/index.html">Multi-index Containers</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/multi_index/index.html">Multi-index Containers</a>:</span>
           <ul>
             <li>
               <div>
@@ -787,7 +787,7 @@
                 Due to the fact that hashed indices rely on a new data structure,
                 the internal representation of their iterators and local iterators
                 have changed, which affects serialization: their corresponding serialization
-                <a href="/doc/libs/1_56_0_beta1/libs/serialization/doc/tutorial.html#versioning">class
+                <a href="/doc/libs/1_56_0_b1/libs/serialization/doc/tutorial.html#versioning">class
                 version</a> has been bumped from 0 to 1. Old archives involving
                 hashed index (local) iterators can be loaded by Boost 1.56 version
                 of Boost.MultiIndex, but not the other way around.
@@ -844,7 +844,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/multiprecision/">Multiprecision</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/multiprecision/">Multiprecision</a>:</span>
           <ul>
             <li>
               <div>
@@ -882,7 +882,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/optional/">Optional</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/optional/">Optional</a>:</span>
           <ul>
             <li>
               <div>
@@ -963,7 +963,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/predef/">Predef</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/predef/">Predef</a>:</span>
           <ul>
             <li>
               <div>
@@ -1003,7 +1003,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/program_options/">Program Options</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/program_options/">Program Options</a>:</span>
           <ul>
             <li>
               <div>
@@ -1022,7 +1022,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/regex/index.html">Regex</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/regex/index.html">Regex</a>:</span>
           <ul>
             <li>
               <div>
@@ -1063,12 +1063,12 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/smart_ptr/">Smart Pointers</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/smart_ptr/">Smart Pointers</a>:</span>
           <ul>
             <li>
               <div>
-                Updated the overloads of <a href="/doc/libs/1_56_0_beta1/libs/smart_ptr/make_shared_array.html">make_shared</a>
-                and <a href="/doc/libs/1_56_0_beta1/libs/smart_ptr/make_shared_array.html">allocate_shared</a>
+                Updated the overloads of <a href="/doc/libs/1_56_0_b1/libs/smart_ptr/make_shared_array.html">make_shared</a>
+                and <a href="/doc/libs/1_56_0_b1/libs/smart_ptr/make_shared_array.html">allocate_shared</a>
                 of array types (<code><span class="identifier">T</span><span class="special">[]</span></code> or <code><span class="identifier">T</span><span class="special">[</span><span class="identifier">N</span><span class="special">]</span></code>) to conform to the specification
                 in C++ standard paper <a href="http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2014/n3939.html">N3939</a>
                 and significantly reduced the spatial overhead of the internal bookkeeping
@@ -1087,7 +1087,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/thread/">Thread</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/thread/">Thread</a>:</span>
           <ul>
             <li>
               <div>
@@ -1297,7 +1297,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/tr1/index.html">TR1</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/tr1/index.html">TR1</a>:</span>
           <ul>
             <li>
               <div>
@@ -1309,7 +1309,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/utility/index.html">Utility</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/utility/index.html">Utility</a>:</span>
           <ul>
             <li>
               <div>
@@ -1336,7 +1336,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/uuid/index.html">UUID</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/uuid/index.html">UUID</a>:</span>
           <ul>
             <li>
               <div>
@@ -1349,7 +1349,7 @@
                 and <code><span class="identifier">swap</span></code>. The support
                 for different versions of SSE is automatically detected at compile
                 time for most compilers, but can also be explicitly enabled or disabled
-                with <a href="/doc/libs/1_56_0_beta1/libs/uuid/uuid.html#Configuration">configuration
+                with <a href="/doc/libs/1_56_0_b1/libs/uuid/uuid.html#Configuration">configuration
                 macros</a>. (<a href="https://svn.boost.org/trac/boost/ticket/8509">#8509</a>)
               </div>
             </li>
@@ -1363,22 +1363,22 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_56_0_beta1/libs/variant/">Variant</a>:</span>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/variant/">Variant</a>:</span>
           <ul>
             <li>
               <div>
                 <strong>Breaking change:</strong> Variant now uses
                 variadic templates if they are supported by compiler. This leads
                 to smaller binaries and better compilation times but in some cases
-                may break metaprogramming functions, especially if <a href="/doc/libs/1_56_0_beta1/libs/variant/doc/html/variant/BOOST_VARIANT_ENUM_PARAMS.html">BOOST_VARIANT_ENUM_PARAMS</a>
-                and <a href="/doc/libs/1_56_0_beta1/libs/variant/doc/html/variant/BOOST_VARIANT_ENUM_SHIFTED_PARAMS.html">BOOST_VARIANT_ENUM_SHIFTED_PARAMS</a>
-                are not used. Usage of variadic templates <a href="/doc/libs/1_56_0_beta1/libs/variant/doc/html/variant/BOOST_VARIANT_DO_NOT_USE_VARIADIC_TEMPLATES.html">may
+                may break metaprogramming functions, especially if <a href="/doc/libs/1_56_0_b1/libs/variant/doc/html/variant/BOOST_VARIANT_ENUM_PARAMS.html">BOOST_VARIANT_ENUM_PARAMS</a>
+                and <a href="/doc/libs/1_56_0_b1/libs/variant/doc/html/variant/BOOST_VARIANT_ENUM_SHIFTED_PARAMS.html">BOOST_VARIANT_ENUM_SHIFTED_PARAMS</a>
+                are not used. Usage of variadic templates <a href="/doc/libs/1_56_0_b1/libs/variant/doc/html/variant/BOOST_VARIANT_DO_NOT_USE_VARIADIC_TEMPLATES.html">may
                 be disabled</a>.
               </div>
             </li>
             <li>
               <div>
-                <a href="/doc/libs/1_56_0_beta1/libs/variant/doc/html/variant/reference.html#header.boost.variant.polymorphic_get_hpp">Added</a>
+                <a href="/doc/libs/1_56_0_b1/libs/variant/doc/html/variant/reference.html#header.boost.variant.polymorphic_get_hpp">Added</a>
                 <code><span class="identifier">polymorphic_get</span></code> function
                 <a href="https://svn.boost.org/trac/boost/ticket/9479">#9479</a>.
               </div>
