--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -41,12 +41,25 @@
 
               <p><span class=news-date">In Progress</span></p>
               <p><a href="/doc/libs/1_56_0_b1/">Documentation</a>
-              <p><span class="news-download"><a href="http://sourceforge.net/projects/boost/files/boost/1.56.0.beta.1/">Download this beta release.</a></span></p>
+              <table class="download-table"><caption>Beta Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.56.0.beta.1/boost-1_56_0_b1.tar.bz2/download">boost-1_56_0_b1.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.56.0.beta.1/boost-1_56_0_b1.tar.gz/download">boost-1_56_0_b1.tar.gz</a></td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost/1.56.0.beta.1/boost-1_56_0_b1.7z/download">boost-1_56_0_b1.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost/1.56.0.beta.1/boost-1_56_0_b1.zip/download">boost-1_56_0_b1.zip</a></td></tr></table>
               <div class="news-description">
                 <div class="description">
 
 
 
+  <div id="version_1_56_0.other_downloads">
+    <h3><span class="link">Other Downloads</span></h3>
+    <ul>
+      <li>
+        <div>
+          <a href="https://sourceforge.net/projects/boost/files/boost-binaries/1.56.0.beta.1/">Windows
+          binaries</a>
+        </div>
+      </li>
+    </ul>
+  </div>
   <div id="version_1_56_0.modularization">
     <h3><span class="link">Modularization</span></h3>
     <p>
