Preprocessor + TTI release notes.

--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -1016,6 +1016,19 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/preprocessor/">Preprocessor</a>:</span>
+          <ul>
+            <li>
+              <div>
+                When using variadic macros tuple functionality was added to match
+                all the array functionality.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/doc/libs/1_56_0_b1/libs/program_options/">Program Options</a>:</span>
           <ul>
             <li>
@@ -1315,6 +1328,25 @@
             <li>
               <div>
                 This library is now deprecated.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/tti/">TTI</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Ticket <a href="https://svn.boost.org/trac/boost/ticket/9441">#9441</a>: Added better support for Sun Solaris Studio C++
+                compiler.
+              </div>
+            </li>
+            <li>
+              <div>
+                Ticket <a href="https://svn.boost.org/trac/boost/ticket/9444">#9444</a>: Handle all situations where the enclosing class
+                is not a class type.
               </div>
             </li>
           </ul>
