Steven Watanabe will review VMD.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -110,9 +110,9 @@ http://www.boost.org/development/website_updating.html
 
                     <td><a href="https://github.com/eldiener/variadic_macro_data">GitHub</a></td>
 
-                    <td>Needed</td>
+                    <td>Steven Watanabe</td>
 
-                    <td>-</td>
+                    <td>August 21, 2014 - August 30, 2014</td>
                   </tr>
 
                   <tr>
