More release notes.

--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -588,6 +588,23 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/functional/hash/">Hash</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Removed some Visual C++ 6 workarounds.
+              </div>
+            </li>
+            <li>
+              <div>
+                Ongoing work on improving <code><span class="identifier">hash_combine</span></code>.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/doc/libs/1_56_0_b1/libs/interprocess/">Interprocess</a>:</span>
           <ul>
             <li>
@@ -1767,6 +1784,29 @@
               <div>
                 Ticket <a href="https://svn.boost.org/trac/boost/ticket/9444">#9444</a>: Handle all situations where the enclosing class
                 is not a class type.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_56_0_b1/libs/unordered/">Unordered</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Minor documentation and warning fixes (<a href="https://svn.boost.org/trac/boost/ticket/9377">#9377</a>, <a href="https://svn.boost.org/trac/boost/ticket/9719">#9719</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Always use prime number of buckets for integers. Fixes performance
+                regression when inserting consecutive integers (<a href="https://svn.boost.org/trac/boost/ticket/9282">#9282</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Only construct elements using allocators, as specified in C++11 standard.
               </div>
             </li>
           </ul>
