Make hash release note a bit clearer.

--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -597,7 +597,8 @@
             </li>
             <li>
               <div>
-                Ongoing work on improving <code><span class="identifier">hash_combine</span></code>.
+                Ongoing work on improving <code><span class="identifier">hash_combine</span></code>,
+                this changes the previously documented algorithm for the function.
               </div>
             </li>
           </ul>
