Update link to windows binaries.

--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -54,7 +54,7 @@
     <ul>
       <li>
         <div>
-          <a href="https://sourceforge.net/projects/boost/files/boost-binaries/1.56.0.beta.1/">Windows
+          <a href="https://sourceforge.net/projects/boost/files/boost-binaries/1.56.0/">Windows
           binaries</a>
         </div>
       </li>
