add references to Boost Library Incubator to review process pages

--- a/development/submissions.html
+++ b/development/submissions.html
@@ -79,7 +79,8 @@ http://www.boost.org/development/website_updating.html
               interest</h2>
 
               <p>Potential library submitters should use the Boost developers
-              <a href="/community/groups.html">mailing list</a> as a forum to
+              <a href="/community/groups.html">mailing list</a> and <a href=
+-              "http://blincubator.com">Boost Library Incubator</a> as forums to
               gauge interest a possible submission.</p>
 
               <p>A message might be as simple as "Is there any interest in a
@@ -102,6 +103,10 @@ http://www.boost.org/development/website_updating.html
               <p>If response to an initial query indicates interest,
               then make your preliminary submission publicly available
               if you haven't already done so.</p>
+
+              <p>You can receive preliminary feedback and reviews by
+              submitting your library to the <a href=
+              "http://blincubator.com">Boost Library Incubator</a>.</p>
 
               <h2><a name="Refinement" id="Refinement"></a>Refinement</h2>
 
