August 2014 Review Wizard Report.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -498,6 +498,21 @@ http://www.boost.org/development/website_updating.html
                 </thead>
 
                 <tr>
+                  <td>Review Wizard Status Report</td>
+
+                  <td></td>
+
+                  <td>Ronald Garcia</td>
+
+                  <td>August 30, 2014</td>
+
+                  <td>
+                    <a href=
+                    "http://lists.boost.org/boost-announce/2014/08/0414.php">Report</a>
+                  </td>
+                </tr>
+
+                <tr>
                   <!-- Added February 2011 -->
 
                   <td>Variadic Macro Data</td>
@@ -665,7 +680,7 @@ http://www.boost.org/development/website_updating.html
 
                   <td>Ronald Garcia</td>
 
-                  <td>March 14, 2012</td>
+                  <td>March 14, 2013</td>
 
                   <td>
                     <a href=
