--- a/donate/index.html
+++ b/donate/index.html
@@ -55,8 +55,8 @@
               should be aware we may also use donations for any other purpose
               the Boost steering committee feels appropriate, and that ten
               percent (10%) of your donation after Paypal's fees will go to
-              the <a href="https://sfconservancy.org/">Software Freedom
-              Conservancy</a>. The Software Freedom Conservancy is a
+              <a href="https://sfconservancy.org/">Software Freedom
+              Conservancy</a>. Software Freedom Conservancy is a
               not-for-profit organization that helps promote, improve,
               develop, and defend Free, Libre, and Open Source Software
               (FLOSS) projects.</p>
