Added Compute to the Schedule.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -456,7 +456,29 @@ http://www.boost.org/development/website_updating.html
                     <td>Needed</td>
 
                     <td>-</td>
-                  </tr><!--
+                  </tr>
+
+                  <tr>
+                    <!-- Added September 2014 -->
+                    <td>Compute</td>
+
+                    <td>Kyle Lutz</td>
+
+                    <td>
+                      <ul>
+                        <li><a href="https://github.com/kylelutz/compute">
+                            Source</a>
+                        <li><a href="http://kylelutz.github.io/compute/">
+                        Documentation</a>
+                      </ul>
+                    </td>                     
+
+                    <td>Antony Polukhin</td>
+
+                    <td>November XX, 2014 - December XX, 2014</td>
+                  </tr>
+
+		  <!--
                   <tr>
                     <!== Added February 2014 - >
                     <td>Library Name</td>
@@ -479,6 +501,7 @@ http://www.boost.org/development/website_updating.html
                       -->
                 </tbody>
               </table>
+
 
               <h2>Past Review Results and Milestones</h2>
 
