--- a/common/menu-community.html
+++ b/common/menu-community.html
@@ -45,6 +45,9 @@
     <li><a href="/community/moderators.html">Moderators <span class=
     "link">&gt;</span></a></li>
 
+    <li><a href="https://sites.google.com/a/boost.org/steering/">Steering
+    Committee <span class="link">&gt;</span></a></li>
+
     <li><a href="/community/requests.html">Requesting a New Feature
     <span class="link">&gt;</span></a></li>
 
