Edward Diener will manage Sorting review.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -87,9 +87,9 @@ http://www.boost.org/development/website_updating.html
                       (GitHub)</a>
                     </td>
 
-                    <td>Needed</td>
+                    <td>Edward Diener</td>
 
-                    <td>-</td>
+                    <td>November 10, 2014 - November 19, 2014</td>
                   </tr>
 
                   <tr>
