added the wrong library.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -78,12 +78,12 @@ http://www.boost.org/development/website_updating.html
                   <tr>
                     <!-- Added May 2009 -->
 
-                    <td>Sorting</td>
+                    <td>Sort</td>
 
                     <td>Steven Ross</td>
 
                     <td>
-                      <a href="https://github.com/boost-vault/Sorting">Source
+                      <a href="https://github.com/spreadsort/sort">Source
                       (GitHub)</a>
                     </td>
 
