Fill in some of the release notes.

--- a/users/history/version_1_57_0.html
+++ b/users/history/version_1_57_0.html
@@ -51,16 +51,6 @@
                 <div class="description">
 
 
-  <div id="version_1_57_0.new_libraries">
-    <h3><span class="link">New Libraries</span></h3>
-    <ul>
-      <li>
-        <div>
-          <em>TODO</em>
-        </div>
-      </li>
-    </ul>
-  </div>
   <div id="version_1_57_0.updated_libraries">
     <h3><span class="link">Updated Libraries</span></h3>
     <ul>
@@ -196,7 +186,128 @@
     <ul>
       <li>
         <div>
-          <em>TODO</em>
+          Linux:
+          <ul>
+            <li>
+              <div>
+                Clang: 3.0, 3.1, 3.2, 3.3, 3.4
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++14, libc++: 3.5, 3.6
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.4.7, 4.5.3, 4.6.4, 4.7.3, 4.8.1, 4.8.2
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++98: 4.9.1
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++11: 4.4.7, 4.8.2, 4.8.3, 4.9.1
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++14: 4.9.1
+              </div>
+            </li>
+            <li>
+              <div>
+                Intel: 13.1, 14.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Intel, C++11: 13.1, 14.0
+              </div>
+            </li>
+            <li>
+              <div>
+                QCC: 4.4.2
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          OS X:
+          <ul>
+            <li>
+              <div>
+                Apple Clang: 6.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Apple Clang, C++11: 6.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Apple Clang, C++14: 6.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.2.1, 4.9.1
+              </div>
+            </li>
+            <li>
+              <div>
+                Intel: 12.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          Windows:
+          <ul>
+            <li>
+              <div>
+                GCC, mingw: 4.4.0, 4.4.7. 4.5.4, 4.6.3, 4.7.2, 4.7.3, 4.8.0, 4.8.2,
+                4.9.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Visual C++: 8.0, 9.0, 10.0, 11.0, 12.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          FreeBSD:
+          <ul>
+            <li>
+              <div>
+                GCC: 4.2.1
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          QNX:
+          <ul>
+            <li>
+              <div>
+                QCC: 4.4.2
+              </div>
+            </li>
+          </ul>
         </div>
       </li>
     </ul>
@@ -214,7 +325,9 @@
   <div id="version_1_57_0.acknowledgements">
     <h3><span class="link">Acknowledgements</span></h3>
     <p>
-      <em>TODO</em>
+      <a href="/users/people/beman_dawes.html">Beman Dawes</a>, Eric Niebler,
+      <a href="/users/people/rene_rivera.html">Rene Rivera</a>, Daniel James,
+      Vladimir Prus and Marshall Clow managed this release.
     </p>
   </div>
 </div>
