--- a/users/history/version_1_57_0.html
+++ b/users/history/version_1_57_0.html
@@ -182,7 +182,7 @@
           <ul>
             <li>
               <div>
-                [New Experimental Features:]
+                <em>New Experimental Features:</em>
                 <ul>
                   <li>
                     <div>
@@ -214,7 +214,7 @@
             </li>
             <li>
               <div>
-                [Fixed Bugs:]
+                <em>Fixed Bugs:</em>
                 <ul>
                   <li>
                     <div>
