--- a/users/history/version_1_57_0.html
+++ b/users/history/version_1_57_0.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>Version 1.57.0 - work in progress</title>
+  <title>Version 1.57.0 beta</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href="/style-v2/section-boost.css" />
@@ -35,33 +35,50 @@
               <h1>Version 1.57.0</h1>
             </div>
 
-                        <div class="section-note"><p>Note: This release is
-                        still under development. Please don't use this page as
-                        a source of information, it's here for development
-                        purposes only. Everything is subject to
-                        change.</p></div>
             <div class="section-body">
               <h2><span class=
-              "news-title">Version 1.57.0 - work in progress</span></h2>
+              "news-title">Version 1.57.0 beta</span></h2>
 
               <p><span class=news-date">In Progress</span></p>
-
-
+              <p><a href="/doc/libs/1_57_0_b1/">Documentation</a>
+              <table class="download-table"><caption>Beta Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="http://sourceforge.net/projects/boost/files/boost-binaries/1.57.0.beta.1/boost_1_57_0_b1.tar.bz2/download">boost_1_57_0_b1.tar.bz2</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost-binaries/1.57.0.beta.1/boost_1_57_0_b1.tar.gz/download">boost_1_57_0_b1.tar.gz</a></td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="http://sourceforge.net/projects/boost/files/boost-binaries/1.57.0.beta.1/boost_1_57_0_b1.7z/download">boost_1_57_0_b1.7z</a></td></tr><tr><td><a href="http://sourceforge.net/projects/boost/files/boost-binaries/1.57.0.beta.1/boost_1_57_0_b1.zip/download">boost_1_57_0_b1.zip</a></td></tr></table>
               <div class="news-description">
                 <div class="description">
 
 
+
+  <div id="version_1_57_0.beta_issues">
+    <h3><span class="link">Beta Issues</span></h3>
+    <p>
+      There are a couple of known problems with this beta:
+    </p>
+    <ul>
+      <li>
+        <div>
+          There are problems building with MSVC 8.0
+        </div>
+      </li>
+      <li>
+        <div>
+          There are some problems with range/detail/any_iterator.hpp.
+        </div>
+      </li>
+    </ul>
+    <p>
+      These will be fixed before the release.
+    </p>
+    <p>
+      Also, the release notes are incomplete at the moment.
+    </p>
+  </div>
   <div id="version_1_57_0.updated_libraries">
     <h3><span class="link">Updated Libraries</span></h3>
     <ul>
       <li>
         <div>
-          <em>TODO</em>
-        </div>
-      </li>
-      <li>
-        <div>
-          <span class="library"><a href="/libs/coroutine/index.html">Coroutine</a>:</span>
+          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/coroutine/index.html">Coroutine</a>:</span>
           <ul>
             <li>
               <div>
@@ -80,11 +97,11 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/flyweight/index.html">Flyweight</a>:</span>
+          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/flyweight/index.html">Flyweight</a>:</span>
           <ul>
             <li>
               <div>
-                Added serialization support via <a href="/libs/serialization/index.html">Boost
+                Added serialization support via <a href="/doc/libs/1_57_0_b1/libs/serialization/index.html">Boost
                 Serialization</a>.
               </div>
             </li>
@@ -101,7 +118,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/iterator/">Iterator</a>:</span>
+          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/iterator/">Iterator</a>:</span>
           <ul>
             <li>
               <div>
@@ -125,7 +142,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/multi_index/index.html">Multi-index Containers</a>:</span>
+          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/multi_index/index.html">Multi-index Containers</a>:</span>
           <ul>
             <li>
               <div>
@@ -140,7 +157,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/preprocessor/">Preprocessor</a>:</span>
+          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/preprocessor/">Preprocessor</a>:</span>
           <ul>
             <li>
               <div>
@@ -178,7 +195,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/thread/">Thread</a>:</span>
+          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/thread/">Thread</a>:</span>
           <ul>
             <li>
               <div>
@@ -379,7 +396,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/utility/">Utility</a>:</span>
+          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/utility/">Utility</a>:</span>
           <ul>
             <li>
               <div>
@@ -396,7 +413,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/numeric/ublas/">uBLAS</a>:</span>
+          <span class="library"><a href="/doc/libs/1_57_0_b1/libs/numeric/ublas/">uBLAS</a>:</span>
           <ul>
             <li>
               <div>
@@ -432,6 +449,11 @@
               </div>
             </li>
           </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <em>TODO: More details to come</em>
         </div>
       </li>
     </ul>
@@ -575,7 +597,7 @@
     <ul>
       <li>
         <div>
-          <em>TODO</em>
+          <em>TODO: Will add soon.</em>
         </div>
       </li>
     </ul>
