More test compilers

--- a/users/history/version_1_57_0.html
+++ b/users/history/version_1_57_0.html
@@ -475,7 +475,7 @@
             </li>
             <li>
               <div>
-                Clang, C++14, libc++: 3.5, 3.6
+                Clang, C++14: 3.5, 3.6
               </div>
             </li>
             <li>
@@ -597,7 +597,127 @@
     <ul>
       <li>
         <div>
-          <em>TODO: Will add soon.</em>
+          Linux:
+          <ul>
+            <li>
+              <div>
+                Clang: 3.0, 3.1, 3.2, 3.3, 3.4.2
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++14: 3.5.0, 3.6.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.4.7, 4.6.4, 4.7.3, 4.8.1, 4.8.2, 5.0 <em>(experimental)</em>
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++11: 4.4.7, 4.8.2, 4.8.3, 4.9.1
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++14: 4.9.1
+              </div>
+            </li>
+            <li>
+              <div>
+                Intel: 11.1, 12.1, 13.0, 13.1, 14.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Intel, C++11: 13.1, 14.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          OS X:
+          <ul>
+            <li>
+              <div>
+                Apple Clang: 6.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Apple Clang, C++11: 6.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Apple Clang, C++14: 6.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang: trunk
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++11: trunk
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.2.1, 4.9.1
+              </div>
+            </li>
+            <li>
+              <div>
+                Intel: 12.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          Windows:
+          <ul>
+            <li>
+              <div>
+                GCC, mingw: 4.4.0, 4.4.7, 4.5.4, 4.6.3, 4.7.3, 4.8.0, 4.8.2, 4.9.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Visual C++: 8.0, 9.0, 10.0, 11.0, 12.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          FreeBSD:
+          <ul>
+            <li>
+              <div>
+                GCC: 4.2.1
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          QNX:
+          <ul>
+            <li>
+              <div>
+                QCC: 4.4.2
+              </div>
+            </li>
+          </ul>
         </div>
       </li>
     </ul>
